# qqqt

./: .gitignore  CLAUDE.md  README.md  command.md  spec.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 70ebbf42a214_add_strategy_comparisons_table.py  84c0a2590498_initial_tables.py
backend/app/: config.py  main.py
backend/app/analytics/: performance.py  risk.py
backend/app/api/: backtest.py  compare.py  data.py  optimize.py  router.py  schemas.py  strategies.py
backend/app/data/: cache.py  kis_api.py  presets.py  provider.py
backend/app/db/: models.py  session.py
backend/app/engine/: backtest.py  broker.py  order.py  portfolio.py  position.py
backend/app/optimizer/: grid_search.py
backend/app/strategies/: __init__.py  base.py  bollinger_bands.py  macd_crossover.py  mean_reversion.py  momentum_breakout.py  rsi.py
backend/app/utils/: exceptions.py  logger.py  response.py
backend/app/worker/: celery_app.py  tasks.py
backend/cli/: main.py
backend/cli/commands/: backtest.py  data.py  optimize.py
backend/tests/: conftest.py
backend/tests/fixtures/: sample_ohlcv.csv
backend/tests/integration/: test_api.py  test_backtest_e2e.py  test_cli.py  test_data_provider.py
backend/tests/unit/: test_bollinger_strategy.py  test_broker.py  test_engine.py  test_macd_strategy.py  test_momentum_strategy.py  test_optimizer.py  test_performance.py  test_portfolio.py  test_presets.py  test_rsi_strategy.py  test_strategy.py
docker/: .dockerignore  backend.Dockerfile  docker-compose.yml  (+1 more)
(+29 files in other folders)
