[tool.poetry]
name = "quant-backtest"
version = "0.1.0"
description = "Quantitative Trading Backtesting System"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.109.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0"}
sqlalchemy = ">=2.0.25"
alembic = ">=1.13.1"
psycopg2-binary = ">=2.9.9"
pydantic = ">=2.5.3"
pydantic-settings = ">=2.1.0"
numpy = ">=1.26.3"
pandas = ">=2.1.4"
pandas-ta = ">=0.4.67b0"
scipy = ">=1.11.4"
httpx = ">=0.26.0"
typer = {extras = ["all"], version = ">=0.9.0"}
rich = ">=13.7.0"
celery = {extras = ["redis"], version = ">=5.3.6"}
redis = ">=5.0.1"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.4"
pytest-asyncio = ">=0.23.3"
pytest-cov = ">=4.1.0"
respx = ">=0.20.2"
black = ">=23.12.1"
ruff = ">=0.1.11"
mypy = ">=1.8.0"

[tool.poetry.scripts]
qbt = "cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=app --cov-report=html"
markers = ["slow: marks tests as slow"]
